--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "hangman",
+  "homepage": "https://K-ost.github.io/hangman-game",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,6 +9,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "deploy": "npm run build && gh-pages -d dist",
     "test": "vitest"
   },
   "dependencies": {
