--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "test": "vitest"
   },
   "dependencies": {
+    "i18next": "^24.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "sass": "^1.86.0",
     "styled-components": "^6.1.16",
     "zustand": "^5.0.3"
